Fixed: box align in 15

--- a/public/css/page15.css
+++ b/public/css/page15.css
@@ -313,7 +313,7 @@ div {
 }
 .a15 .a1525152626 {
   background-color    : rgba(223, 226, 229, 1.0);
-  top                 : 620px;
+  top                 : 619.5px;
   height              : 42px;
   width               : 220px;
   position            : absolute;
@@ -588,7 +588,7 @@ div {
 }
 .a15 .a1501150251 {
   background-color    : rgba(223, 226, 229, 1.0);
-  top                 : 168px;
+  top                 : 167.5px;
   height              : 42px;
   width               : 220px;
   position            : absolute;
